env/code_53eb4de836c40/stderr.txt
  File "main.py", line 22
    if total = prices[x] + total
             ^
SyntaxError: invalid syntax
